--- a/Frontend/www/order.html
+++ b/Frontend/www/order.html
@@ -12,6 +12,9 @@
     <!-- LESS JavaScript компілятор -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
 
+    <script	type="text/javascript"
+               src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAl5JjMaP9GYQLwTntLtvO3AolGESMWYtw">
+    </script>
 
 </head>
 <body>
@@ -85,6 +88,9 @@
                     <button id='next_b' class="btn btn-warning next-step-button">Далі ❯</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="googleMap" id="map"></div>
+            </div>
         </div>
     </div>
 
@@ -109,13 +115,6 @@
         </div>
         <div id='buy_b' class="btn btn-warning">Замовити</div>
     </div>
-</div>
-
-
-
-<div class="footer_o">
-    <p>Pizza.22 - практичний проект в межах курсу JavaScript в Києво-Могилянській Академії</p>
-    <p>Доставка піци не здійснюється</p>
 </div>
 
 <div class="bottom-label">
