--- a/Frontend/www/order.html
+++ b/Frontend/www/order.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
 
     <script	type="text/javascript"
-               src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAl5JjMaP9GYQLwTntLtvO3AolGESMWYtw">
+               src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAl5JjMaP9GYQLwTntLtvO3AolGESMWYtw&libraries=places&callback=initMap">
     </script>
 
 </head>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="googleMap" id="map"></div>
+                <div class="googleMap"></div>
             </div>
         </div>
     </div>
